hphp/test/quick/tostring.php.expectf
HipHop Fatal error: Bad type conversion: X::__toString() was not defined. in %s on line 12
